<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginFragment">

    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/login_bg_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/app_name_ru"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
        android:textColor="@color/md_theme_light_onPrimary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/image_view_logo"
        app:layout_constraintTop_toTopOf="@id/image_view_logo" />

    <TextView
        android:id="@+id/login_welcome_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/msg_entering"
        android:textColor="@color/md_theme_light_onPrimaryContainer"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/image_view_logo"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="8dp"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:text="@string/entry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>