<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/photo_desc"
            android:src="@drawable/ic_baseline_image_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/photo"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1 000 000" />

        <TextView
            android:id="@+id/tv_rubles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/rubles_symbol"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_price"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_square"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@id/photo"
            app:layout_constraintTop_toBottomOf="@id/tv_price"
            tools:text="60.5" />

        <TextView
            android:id="@+id/tv_sq_meters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sq_meters"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@id/tv_square"
            app:layout_constraintTop_toBottomOf="@id/tv_price" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="20dp"
            android:padding="8dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/photo"
            app:layout_constraintTop_toBottomOf="@id/tv_square"
            tools:text="г. Тюмень, ул. Харьковская, д. 83, кв. 707" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>